Sat Jul 15 04:11:06 2006  Tim Janik  <timj@gtk.org>

	* bsebiquadfilter.c (bse_biquad_filter_class_init): 
	disabled ::norm_type property because chenging it to something
	non-default drives the filter unstable too easily.

Thu Jul 13 21:36:28 2006  Tim Janik  <timj@gtk.org>

	* bseautodoc.c: pass through --bse-rcfile to bse.

Sun Jul  9 14:53:26 2006  Tim Janik  <timj@gtk.org>

	* renamed the guile based bsesh to bsescm. adapted related build rules,
	variable names, function names and documentation.

Sun Jul  9 02:44:41 2006  Tim Janik  <timj@gtk.org>

	* renamed bse_engine_garbage_collect() to bse_engine_user_thread_collect().

Sun Jul  9 02:24:00 2006  Tim Janik  <timj@gtk.org>

	* zintern/gus-patch.bse: 
	* bse/zintern/wave-mono.bse: updated to beast 0.7.0, clarified license.

Fri Jul  7 02:17:02 2006  Tim Janik  <timj@gtk.org>

	* gslcommon.c:
	* bsepcmdevice-oss.c:
	* bsemididevice-oss.c: use birnet_file_equals() and
	birnet_file_check().

Thu Jul  6 22:45:17 2006  Tim Janik  <timj@gtk.org>

	* zintern/Makefile.am: use birnet-zintern.

	* zintern/zintern.c: rmeoved.

Wed Jun 21 23:37:41 2006  Tim Janik  <timj@gtk.org>

	* bsestorage.c: type fixup.

Wed Jun 14 15:44:27 2006  Stefan Westerfeld <stefan@space.twc.de>

	* bseitem.h(bse_item_undo_open): Added G_GNUC_PRINTF printf format
	attribute.

Mon Jun 12 01:09:51 2006  Tim Janik  <timj@gtk.org>

	* bsecxxutils.hh: got rid of TEMPLATE_ERROR::* which is provided
	by Birnet now.
	
	* bsecxxarg.hh: use Birnet::TEMPLATE_ERROR::invalid_type().

Mon Jun  5 13:59:52 2006  Tim Janik  <timj@gtk.org>

	* bsecxxutils.hh: removed binary lookup templates which are 
	in Birnet now.

Wed May 31 03:04:03 2006  Tim Janik  <timj@gtk.org>

	* bseproject.c bse_project_restore(): force dirty project flag 
	after restoring/merging.

	* gslfft.h: fixed documentation.

	* tests/testfft.c: added resynthesis tests.

Wed May 31 00:39:24 2006  Tim Janik  <timj@gtk.org>

	* bseengine.c (bse_trans_merge): docu fixups.
