@@ -1,3 +1,8 @@
+Sat Jul 15 20:06:24 2006  Tim Janik  <timj@gtk.org>
+
+	* gslwaveosc-aux.c: use doubles instead of floats to store temporary
+	filter state. this avoids artefacts for larger pitch values.
+
 Sat Jul 15 04:11:06 2006  Tim Janik  <timj@gtk.org>
 
 	* bsebiquadfilter.c (bse_biquad_filter_class_init): 
